--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,89 +85,66 @@
         app:barrierDirection="bottom"
         app:constraint_referenced_ids="content" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="0dp"
+    <ImageView
+        android:id="@+id/likes"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/common_spacing"
-        android:gravity="center"
-        android:orientation="horizontal"
+        android:contentDescription="@string/likes"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/barrier_2">
+        app:layout_constraintTop_toBottomOf="@+id/barrier_2"
+        app:srcCompat="@drawable/ic_like" />
 
-        <ImageButton
-            android:id="@+id/like"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"
-            android:contentDescription="@string/likes"
-            app:srcCompat="@drawable/ic_like" />
+    <TextView
+        android:id="@+id/likesCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="@dimen/common_spacing"
+        android:text="@string/_10"
+        app:layout_constraintBottom_toBottomOf="@+id/likes"
+        app:layout_constraintStart_toEndOf="@+id/likes"
+        app:layout_constraintTop_toBottomOf="@+id/barrier_2" />
 
-        <TextView
-            android:id="@+id/likeCount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_weight="1"
-            android:text="@string/_10" />
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/views"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:contentDescription="@string/views"
+        app:layout_constraintBottom_toBottomOf="@+id/viewsCount"
+        app:layout_constraintEnd_toStartOf="@+id/viewsCount"
+        app:layout_constraintTop_toTopOf="@+id/viewsCount"
+        app:srcCompat="@drawable/ic_eye" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="0dp"
+    <ImageView
+        android:id="@+id/shares"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="@dimen/common_spacing"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout1"
-        app:layout_constraintTop_toTopOf="@id/barrier_2">
+        android:contentDescription="@string/shares"
+        app:layout_constraintBottom_toBottomOf="@+id/likes"
+        app:layout_constraintStart_toEndOf="@+id/likesCount"
+        app:layout_constraintTop_toTopOf="@+id/likes"
+        app:srcCompat="@drawable/ic_share" />
 
-        <ImageButton
-            android:id="@+id/shares"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"
-            android:contentDescription="@string/shares"
-            app:srcCompat="@drawable/ic_share" />
-
-        <TextView
-            android:id="@+id/sharesCount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_weight="1"
-            android:text="@string/_5" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/sharesCount"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/common_spacing"
-        android:gravity="center"
-        android:orientation="horizontal"
+        android:layout_marginStart="8dp"
+        android:text="@string/_5"
+        app:layout_constraintBottom_toBottomOf="@+id/shares"
+        app:layout_constraintStart_toEndOf="@+id/shares"
+        app:layout_constraintTop_toTopOf="@+id/shares" />
+
+    <TextView
+        android:id="@+id/viewsCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/_10"
+        app:layout_constraintBottom_toBottomOf="@+id/sharesCount"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/barrier_2">
-
-        <ImageButton
-            android:id="@+id/views"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:layout_weight="1"
-            android:contentDescription="@string/views"
-            app:srcCompat="@drawable/ic_eye" />
-
-        <TextView
-            android:id="@+id/viewsCount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_weight="1"
-            android:text="@string/_500" />
-
-    </LinearLayout>
+        app:layout_constraintTop_toTopOf="@+id/sharesCount" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
