--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,17 @@
         app:barrierDirection="top"
         app:constraint_referenced_ids="content,save" />
 
+    <ImageButton
+        android:id="@+id/close"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:contentDescription="close_edit"
+        android:src="@drawable/ic_close_24"
+        app:layout_constraintBottom_toTopOf="@+id/content"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <EditText
         android:id="@+id/content"
         android:layout_width="0dp"
