--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -72,10 +72,38 @@
         android:lineSpacingMultiplier="1.5"
         android:paddingTop="@dimen/common_spacing"
         android:paddingBottom="@dimen/common_spacing"
+        app:layout_constraintBottom_toTopOf="@id/footer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/header"
         tools:text="@sample/posts.json/data/content" />
+
+    <ImageView
+        android:id="@+id/video_pic"
+        android:layout_width="match_parent"
+        android:layout_height="248dp"
+        android:scaleType="center"
+        android:visibility="invisible"
+        android:src="@drawable/pic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/header"
+        app:layout_constraintBottom_toTopOf="@id/footer"
+        />
+
+    <ImageButton
+        android:id="@+id/play_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:clickable="true"
+        android:background= "@android:color/transparent"
+        android:src="@drawable/sharp_play_circle_outline_24"
+        app:layout_constraintBottom_toBottomOf="@+id/content"
+        app:layout_constraintEnd_toEndOf="@+id/video_pic"
+        app:layout_constraintStart_toStartOf="@+id/content"
+        app:layout_constraintTop_toTopOf="@+id/content" />
+
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/footer"
@@ -87,24 +115,23 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/like"
         style="@style/Widget.AppTheme.LikeButton"
-        android:backgroundTint="@android:color/transparent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@android:color/transparent"
         android:checkable="true"
         android:contentDescription="@string/description_post_like"
         android:text="@string/_5"
         app:icon="@drawable/ic_like"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/footer"
-         />
+        app:layout_constraintTop_toBottomOf="@id/footer" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/share"
         style="@style/Widget.AppTheme.IconButton"
-        android:backgroundTint="@android:color/transparent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/common_spacing"
+        android:backgroundTint="@android:color/transparent"
         android:contentDescription="@string/description_post_share"
         android:text="@string/_5"
         app:icon="@drawable/ic_share"
@@ -114,9 +141,9 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/views"
         style="@style/Widget.AppTheme.IconButton"
-        android:backgroundTint="@android:color/transparent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@android:color/transparent"
         android:clickable="false"
         android:contentDescription="@string/description_post_share"
         android:text="@string/_500"
