--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -13,10 +13,17 @@
         <action
             android:id="@+id/action_feedFragment_to_newPostFragment"
             app:destination="@id/newPostFragment" />
+        <action
+            android:id="@+id/action_feedFragment_to_editPostFragment"
+            app:destination="@id/editPostFragment" />
     </fragment>
     <fragment
         android:id="@+id/newPostFragment"
         android:name="com.example.and2.homework.and.homework.s01.fragment.NewPostFragment"
         android:label="fragment_new_post"
         tools:layout="@layout/fragment_new_post" />
+    <fragment
+        android:id="@+id/editPostFragment"
+        android:name="com.example.and2.homework.and.homework.s01.fragment.EditPostFragment"
+        android:label="EditPostFragment" />
 </navigation>
